[package]
name = "aya-project-cgroup-skb-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-project-cgroup-skb-common = { path = "../aya-project-cgroup-skb-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }
xtask = { path = "../xtask" }

[[bin]]
name = "aya-project-cgroup-skb"
path = "src/main.rs"
